clusters/home/internal/landing-page/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: internal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:

      #  INIT CONTAINER
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
          volumeMounts:
            # Home page
            - name: html
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
              readOnly: true

            # Security reports + UI
            - name: trivy-reports
              mountPath: /usr/share/nginx/html/security

      volumes:
        - name: html
          configMap:
            name: nginx-html

        - name: security-html
          configMap:
            name: trivy-security-html

        - name: trivy-reports
          persistentVolumeClaim:
            claimName: trivy-reports
