clusters/home/internal/landing-page/ingress-internal.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: files-internal
  namespace: home
spec:
  entryPoints:
    - private
  routes:
    - match: Host(`home.internal`)
      kind: Rule
      priority: 10
      services:
        - name: nginx
          port: 80
