clusters/home/internal/landing-page/ingress-public.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: home
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`files.pavel-usanli.online`)
      kind: Rule
      priority: 10
      services:
        - name: nginx
          port: 80

  tls:
    certResolver: cloudflare
